@@ -1,76 +1,106 @@
-# CG Arena (readme is outdated)
+# CG Arena
 
-This is a local arena for CodinGame challenges.
+Local bot arena similar to CodinGame.
+
+![screenshot](/assets/readme_screenshot.png)
 
 ## Features
 
-- Add bots
-- Run matches
-- Check the rating
+- Web UI
+    - Add/Delete bots
+    - Check leaderboard
+- Matchmaking
+- Rating calculation
+    - OpenSkill
 
-## How to use
+## Installation
 
-1. To create a new arena for a game use `cgarena new`:
+## Usage
+
+1. To create a new arena in the current folder run:
    ```shell
-   cgarena new spring-challenge-2022
+   cgarena init
    ```
-   Let's check out what CG Arena has generated for us:
-   ```shell
-   cd spring-challenge-2022
-   tree .
-   .
-   ├── config.toml
-   └── bots
-
-   1 directory, 1 file
-   ```
-   Let's check out `config.toml`:
-   ```toml
-   [game]
-   title = "spring-challenge-2022"
-   min_players = 2
-   max_players = 2
-   symmetric = true
-   referee = ""
-   ```
-   This is called arena config, and it contains all of the config that CG Arena needs to function.
-2. Modify `config.toml` file according to the challenge rules, e.g.:
-    ```toml
-    [game]
-    title = "spring-challenge-2022"
-    min_players = 2
-    max_players = 2
-    # Whether the map is symmetric for all the players. If set to false extra mirror matches would be played.
-    symmetric = true
-    # The command to start the referee process. The referee must respect cg-brutaltester protocol
-    referee = "java -jar cg-referee-ghost-in-cell.jar"
-    ``` 
-3. Run the following and keep it running in the background:
+2. To run arena previously initialized in the current folder run:
    ```shell
    cgarena run
-   ```
-4. In another terminal use CLI commands to work with the tool:
-   ```shell
-   cgarena help
-   ```
 
-### Adding a bot
+## Configuration
 
-To add the bot run the following:
-```shell
-cgarena bot add "test-bot" -f test.cpp
+`cgarena init` command generates `cgarena_config.toml` file including default config.
+You can check the contents of the default config [here](/assets/default_config.toml).
+
+The config file is documented, so read through it and don't forget to restart the arena if you make any changes to the
+config file.
+
+### Worker configuration
+
+Worker configuration has 3 important properties:
+
+- `cmd_play_match`
+- `cmd_build`
+- `cmd_run`
+
+Here are some good defaults for them:
+
+```toml
+cmd_play_match = "python play_game.py {SEED} {PLAYERS}"
+cmd_build = "sh build.sh {DIR} {LANG}"
+cmd_run = "sh run.sh {DIR} {LANG}"
 ```
 
-### Adding a standalone worker
+You would also need to create following files in the arena folder:
 
-Start the worker on another pc in local network:
-```shell
-cgarena-worker -t 4
+CodinGame compatible `play_game.py` (slightly modified version from Psyleague readme)
+
+```python
+import sys, subprocess, random, json, tempfile, os
+if __name__ == '__main__':
+    f, log_file = tempfile.mkstemp(prefix='log_')
+    os.close(f)
+
+    n_players = len(sys.argv) - 2
+    seed = sys.argv[1]
+    # assumes brutaltester-compatible referee.jar is placed in the same folder
+    cmd = 'java --add-opens java.base/java.lang=ALL-UNNAMED -jar referee.jar' + ''.join([f' -p{i} "{sys.argv[i + 1]}"' for i in range(1, n_players+1)]) + f' -d seed={seed} -l "{log_file}"'
+    task = subprocess.run(cmd, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)
+    with open(log_file, 'r') as f:
+        json_log = json.load(f)
+    os.remove(log_file)
+    p_scores = [int(json_log['scores'][str(i)]) for i in range(n_players)]
+    rv = {}
+    rv['ranks'] = [sum([int(p_score < p2_score) for p2_score in p_scores]) for p_score in p_scores] # assumes higher score is better
+    rv['errors'] = [int(p_score < 0) for p_score in p_scores] # assumes negative score means error
+    print(json.dumps(rv))
 ```
 
-To add the worker run the following:
+Generic `build.sh` which can support multiple programming languages
+
 ```shell
-cgarena worker add "local-laptop" -h <host> -p <port>
+if [ "$2" = "c++" ]; then
+  g++ -std=c++17 -x c++ "$1"/source.txt -o "$1"/a.exe
+elif [ "$2" = "python" ]; then
+  cp "$1"/source.txt "$1"/a.py
+else
+  echo "Unsupported language '$2'" >&2
+fi
 ```
 
-You should manually install all the languages to each worker. CG Arena will perform a health check on each worker for each language defined in config.
+Generic `run.sh` which can support multiple programming languages
+
+```shell
+if [ "$2" = "c++" ]; then
+  ./"$1"/a.exe
+elif [ "$2" = "python" ]; then
+  python ./"$1"/a.py
+else
+  echo "Unsupported language '$2'" >&2
+fi
+```
+
+For languages which need project folder (e.g. Rust) you build bot the following way:
+
+- somewhere create single project which has all the dependencies installed
+- inside `build.sh` copy `source.txt` to that project folder (e.g. `main.rs` for Rust)
+- build the project
+- copy the executable from the project build to the bot directory
